# ezsp

./: README.md  pyproject.toml  pytest.ini
config/: plot_template.yaml  tangram_template.yaml  tg.yaml
ezsp/: __main__.py  _api.py  _img_utils.py  _io.py  _pp.py  _ref_utils.py  img_utils.py  pl.py  sdata_utils.py  segment.py  segment_adata.py  segment_sdata.py  segment_tg.py  tg_adata.py  tg_sdata.py
test/: conftest.py  test_sdata_utils.py  test_segment.py  test_segment_adata.py
