[project]
name = "ezsp"
version = "0.1.0"
description = "import others packages to run our projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "squidpy>=1.6.5",
    "tangram-sc>=1.0.4",
    "spatialdata>=0.2",
    "spatialdata-plot>=0.2",
    "img_norm",
]

[tool.uv]
package = false

[tool.uv.sources]
img_norm = { git = "https://github.com/brainfo/imgnorms", branch = "main" }
tangram-sc = { git = "https://github.com/brainfo/Tangram" }