[project]
name = "ezsp"
version = "0.1.0"
description = "import others packages to run our projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "squidpy>=1.6.5",
    "tangram-sc>=1.0.4",
    "spatialdata>=0.2",
    "spatialdata-plot>=0.2",
]

[project.scripts]
ezsp = "ezsp.__main__:main"

[tool.setuptools.packages.find]
include = ["ezsp*"]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "pytest>=7.0.0",
]

[tool.uv]
package = true

[tool.uv.sources]
tangram-sc = { git = "https://github.com/brainfo/Tangram"}